group_bookings action updated

--- a/app/views/rails_admin/main/group_bookings.html.erb
+++ b/app/views/rails_admin/main/group_bookings.html.erb
@@ -35,7 +35,7 @@
         <td><%=@booking_group.payment_status%></td>
       </tr>
       <tr>
-        <th>payment_type</th>
+        <th>Payment Type</th>
         <td><%=@booking_group.payment_type%></td>
         <th>Total Amount</th>
         <td><%=@booking_group.total_amount%></td>
