--- a/app/views/rails_admin/main/group_bookings.html.erb
+++ b/app/views/rails_admin/main/group_bookings.html.erb
@@ -12,7 +12,7 @@
           <%= link_to "#{@booking.workspace&.name}", show_path(model_name: 'Workspace', id: @booking.workspace&.id), target: "_blank" %>
         </td>
         <th>Booking Date</th>
-        <td><%=@booking.booking_date%></td>
+        <td><%=@booking.booking_date.strftime("%d-%b-%Y")%>%></td>
         <th>booked User</th>
         <td>
           <%= link_to "#{@booking_group.created_by&.email}", show_path(model_name: 'User', id: @booking_group.created_by&.id), target: "_blank" %>
@@ -63,7 +63,8 @@
         <th>Sno</th>
         <th>User</th>
         <th>External Guest</th>
-        <th>Booked Date</th>
+        <th>Start Date</th>
+        <th>End Date</th>
         <th>Amount</th>
         <th>Net Amount</th>
         <th>Tax</th>
@@ -83,6 +84,7 @@
           <td><%=booking.user.email rescue nil%></td>
           <td><%=booking.external_guest.email rescue nil%></td>
           <td><%=booking.start_time.strftime("%d-%b-%Y")%></td>
+          <td><%=booking.end_time.strftime("%d-%b-%Y")%></td>
           <td><%=booking.amount%></td>
           <td><%=booking.net_amount%></td>
           <td><%=booking.tax%></td>
