--- a/app/views/rails_admin/main/company_users.html.erb
+++ b/app/views/rails_admin/main/company_users.html.erb
@@ -1,6 +1,5 @@
-<h2 style="text-align: center"> <%=@company.name%> Users </h2>
-
 <%if !@users.blank?%>
+<h2 style="text-align: center"> <%=@company.name%> Users </h2>
 	<table class="table table-condensed table-striped">
 		<tr>
 			<th>S.No</th>
@@ -23,5 +22,30 @@
 	</table>
 	<%= paginate @users, theme: 'twitter-bootstrap-3' rescue nil%>
 <%else%>
-	<h2>There are no online users</h2>
+	<h2>There are no users</h2>
 <%end%>
+
+
+<%if !@external_users.blank?%>
+<h2 style="text-align: center"> <%=@company.name%> External Guests </h2>
+	<table class="table table-condensed table-striped">
+		<tr>
+			<th>S.No</th>
+			<th>Name</th>
+			<th>Group</th>
+		</tr>
+		<%@external_users.each_with_index do|user,index|%>
+			<tr>
+				<td><%=index+1%></td>
+				<td>
+					<%=link_to user.name, show_path(model_name: "ExternalGuest", id: user.id), target: "_blank"%>
+          		</td>
+				<td>
+					<%=link_to user.group.name, show_path(model_name: "Group", id: user.group.id), target: "_blank"%>
+          		</td>
+			</tr>
+		<%end%>
+	</table>
+	<%= paginate @external_users, theme: 'twitter-bootstrap-3' rescue nil%>
+<%end%>
+
